# Salesforce-RAG

./: add_embeddings_to_snowflake.py  ask_snowflake_rag.py  main.py  pyproject.toml
documents/: doc1.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt
